Add bars link to index pages.

--- a/app/views/thing1/home/index.html.haml
+++ b/app/views/thing1/home/index.html.haml
@@ -2,3 +2,4 @@
   Hi.  I'm thing #1.  I am quite fond of Foos.
 .links
   = link_to 'My foos, let me show you them', foos_path
+  = link_to 'Let\'s see some bars', bars_path
