Add site specific routes for a shared resource.

--- a/app/views/thing1/home/index.html.haml
+++ b/app/views/thing1/home/index.html.haml
@@ -1,5 +1,6 @@
 .intro
   Hi.  I'm thing #1.  I am quite fond of Foos.
+  I'm allowed to look at Bars, but not make or edit them.
 .links
   = link_to 'My foos, let me show you them', foos_path
   = link_to 'Let\'s see some bars', bars_path
