--- a/app/views/thing2/home/index.html.haml
+++ b/app/views/thing2/home/index.html.haml
@@ -1,4 +1,5 @@
 .intro
   Hi.  I'm thing #2.  I'm not allowed to play with Foos.
+  I can make and edit Bars, though.
 .links
   = link_to 'Let\'s see some bars', bars_path
